--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".adapters.NotificationDismissReceiver" />
+        <receiver android:name=".helpers.NotificationDismissReceiver" />
     </application>
 
 </manifest>
